--- a/src/LineChart.css
+++ b/src/LineChart.css
@@ -19,3 +19,19 @@
   font-size: 16px;
   font-weight: bold;
 }
+
+.x-label {
+  font-size: 12px;
+  transform: translate(-50%);
+}
+
+.x-label::before {
+  display: block;
+  content: " ";
+  position: absolute;
+  top: -8px;
+  width: 1px;
+  height: 5px;
+  background-color: black;
+  left: 50%;
+}
