--- a/slides/theme/style.css
+++ b/slides/theme/style.css
@@ -208,6 +208,29 @@ http://zenorocha.mit-license.org
 
 /* }}} */
 
+.package-name {
+  position: absolute;
+  top: 5vh;
+  font-family: 'Overpass Mono', monospace;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.package-name::before {
+  display: block;
+  content: "Package:";
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2vh;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 700;
+  opacity: .7;
+}
+
+.progress-bar {
+  background-color: gold;
+}
+
 .bk-video .slide-content {
   align-items: center;
 }
@@ -241,61 +264,19 @@ http://zenorocha.mit-license.org
   height: 8vh;
 }
 
+.slide.bk-white {
+  background-color: white;
+}
+
 .slide.chart-video {
   background-color: #f2f3f7;
 }
 
-.slide.chart-videos .slide-content {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-  grid-template-rows: 25% 25% 25% 25%;
-  grid-gap: 0 0;
+.chart-video video {
+  width: 90%;
 }
 
-.video-width {
-  width: 100%;
-}
-
-.video-height {
-  height: 100%;
-}
-
-#area-1 {
-  grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  text-align: center;
-}
-
-#area-2 {
-  grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 2;
-  grid-row-end: 3;
-  text-align: center;
-}
-
-#area-3 {
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row-start: 3;
-  grid-row-end: 5;
-}
-
-#area-4 {
-  grid-column-start: 3;
-  grid-column-end: 5;
-  grid-row-start: 3;
-  grid-row-end: 5;
-}
-
-
-.slide.code {
+.slide.code, .slide.vim-code {
   background: #282a36;
 }
 
@@ -340,3 +321,33 @@ http://zenorocha.mit-license.org
   margin-bottom: 3vh;
   max-width: 60ch;
 }
+
+.vim-code code {
+}
+
+#vimCodeElement {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow-y: scroll;
+}
+
+#vimCodeElement .LineNr {
+  opacity: 0;
+}
+
+#vimCodeElement .Include { color: #8be9fd; }
+#vimCodeElement .Identifier { color: #8be9fd; }
+#vimCodeElement .Function { color: #8be9fd; }
+#vimCodeElement .String { color: #f1fa8c; }
+
+#vimCodeElement .jsReturn,
+#vimCodeElement .jsOperator,
+#vimCodeElement .StorageClass { color: #ff79c6; }
+
+#vimCodeElement .Type { color: #8be9fd; }
+
+#vimCodeElement .jsFuncCall { color: #50fa7b; }
+
